test/app.css
/** Default **/

html {
    background-color: #131b1b;
    font-family: 'Signika', sans-serif;
}

/** {*/
/*    outline: 1px solid #e0e0e00d;*/
/*}*/

body {
    /*overflow-x: hidden;*/
}


/** Nav **/

nav {
    position: fixed;
    left: 0px;
    height: 100px;
    width: 80%;
    padding-left: 10%;
    padding-right: 10%;
    padding-top: 30px;
    z-index: 99999999;
}

nav .menu {
    display: inline;
}

nav .menu a {
    color: #677678;
    padding: 30px 30px;
    font-size: 18px;
    text-transform: uppercase;
    text-decoration: none;
    font-weight: lighter;
}

nav .menu a:hover {
    color: #8cc63f;
}

nav .vault {
    float: right;
}

nav .vault a {
    color: #8cc63f;
    font-size: 24px;
    border-radius: 50px;
    padding: 12px 37px;
    border: 1px solid #05a6dd;
}

nav .vault a:hover {
    color: #05a6dd;
}

@media (max-width: 768px) {
    nav .vault a {
        font-size: 16px;
        padding: 7px 32px;
    }
}


/** Tuk Container **/
.tuk-container {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

@media (min-width: 768px) {
    .tuk-container {
        width: 750px;
    }
}

@media (min-width: 992px) {
    .tuk-container {
        width: 970px;
    }
}

@media (min-width: 1200px) {
    .tuk-container {
        width: 1170px;
    }
}

@media (min-width: 1300px) {
    .tuk-container {
        width: 1270px;
    }
}

@media (min-width: 1400px) {
    .tuk-container {
        width: 1370px;
    }
}

@media (min-width: 1500px) {
    .tuk-container {
        width: 1470px;
    }
}

@media (min-width: 1600px) {
    .tuk-container {
        width: 1570px;
    }
}

@media (min-width: 1700px) {
    .tuk-container {
        width: 1670px;
    }
}








/** Vault **/

.vault-container {
    width: 400px;
    height: 400px;
    padding: 200px;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    z-index: 1;
    border-radius: 50%;
}

#vault-inner {
    padding: 63px;
    width: 273px;
    height: 273px;
    position: absolute;
    top: 200px;
    left: 200px;
    z-index: 1;
    /*border-radius:50%;*/
    /*box-shadow: rgb(0 0 0 / 75%) 0px 10px 198px 70px;*/
}

.vault-without-logo-img, .vault-logo-img {
    width: 70%;
    position: absolute;
    left: 15%;
    top: 200px;
}

@media (max-width: 768px) {
    .vault-without-logo-img, .vault-logo-img {
        width: 100%;
        left: 0%;
        top: 200px;
    }
}


#vault-outer {
    width: 400px;
    height: 400px;
    position: absolute;
    top: 200px;
    left: 200px;
    -webkit-animation: spin 20s linear;
    -moz-animation: spin 20s linear infinite;
    animation: spin 20s linear infinite;
    z-index: 1;
}

@-moz-keyframes spin {
    100% {
        -moz-transform: rotate(360deg);
    }
}

@-webkit-keyframes spin {
    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}


/** Hero **/
@keyframes Pulsate {
    from {
        opacity: 1;
    }
    50% {
        opacity: 0.3;
    }
    to {
        opacity: 1;
    }
}

.bg-hero-title {
    float: left;
    text-align: left;
    max-width: 80%;
    margin-left: 10%;
    margin-top: 300px;
}

@media (max-width: 768px) {
    .bg-hero-title {
        margin-top: 150px !important;
    }
}

.bg-hero-title .title-container, .bg-hero-title .title-support {
    text-align: left;
    margin-left: 0px;
    width: unset;
}

.bg-hero-container {
    position: relative;
    height: 120vh;
    overflow-x: hidden;
}

.bg-hero {
    position: absolute;
    right: 0px;
    height: 120vh;
    z-index: -1;
}

.bg-hero-1 {
    animation: Pulsate 20s linear infinite;
}

.bg-hero-2 {
    animation: Pulsate 20s linear infinite;
    animation-delay: 5000ms;
}

.bg-hero-3 {
    animation: Pulsate 20s linear infinite;
    animation-delay: 2500ms;
}

.btn {
    position: relative;
    display: inline-block;
    width: 200px;
    height: 50px;
    font-size: 1em;
    font-weight: bold;
    line-height: 60px;
    text-align: center;
    text-transform: uppercase;
    background-color: transparent;
    cursor: pointer;
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-weight: 900;
    font-size: 17px;
    letter-spacing: 0.045em;
}

.btn svg {
    position: absolute;
    top: 0;
    left: 0;
}

.btn svg rect {
/ / stroke: #b49909;
    stroke-width: 2;
    stroke-dasharray: 353, 0;
    stroke-dashoffset: 0;
    -webkit-transition: all 600ms ease;
    transition: all 600ms ease;
}

.btn span {
    cursor: pointer;
    background: #7aad39;
    background: -moz-linear-gradient(left, #96d348 0%, #7aad39 100%);
    background: -webkit-linear-gradient(left, #96d348 0%, #7aad39 100%);
    background: linear-gradient(to right, #96d348 0%, #7aad39 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#96d348', endColorstr='#7aad39', GradientType=1);
    color: #7aad39;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.btn:hover svg rect {
    stroke-width: 2;
    stroke-dasharray: 196, 543;
    stroke-dashoffset: 547;
}


/** OTHER **/

.gradient-title {
    font-size: 48px;
    font-weight: 800;
    background: -webkit-linear-gradient(45deg, #00aeef, #8cc73b 70%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

@media (max-width: 768px) {
    .gradient-title {
        font-size: 36px !important;
    }
}


.title-container {
    margin-top: 150px;
    width: 200px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 200px;
}

@media (max-width: 768px) {
    .title-container {
        margin-top: 0px;
        margin-bottom: 0px;
    }
}

.title-support {
    text-align: center;
    font-weight: 100;
    line-height: 36px;
    font-size: 21px;
}

@media (max-width: 768px) {
    .title-support {
        line-height: 30px;
        font-size: 18px;
    }
}
/* ... */

